[gd_scene load_steps=13 format=3 uid="uid://kt60ux60mwa6"]

[ext_resource type="Texture2D" uid="uid://8nmamdahabq7" path="res://assets/tilesets/CuteRPG_Village.png" id="1_8pp38"]
[ext_resource type="Script" path="res://quest_board.gd" id="1_d1k07"]
[ext_resource type="PackedScene" uid="uid://bvbq04va7bwnw" path="res://scenes/components/interactable/interactable.tscn" id="1_x40l5"]
[ext_resource type="Script" path="res://new_quest_label.gd" id="2_w7nap"]
[ext_resource type="PackedScene" uid="uid://vx7l7yoxtgjd" path="res://systems/audio_system/scenes/one_shot_sound_component/one_shot_sound_component.tscn" id="3_m0fie"]
[ext_resource type="Shader" path="res://shaders/2d_outline.gdshader" id="3_x545g"]
[ext_resource type="Resource" uid="uid://bjutj1p0b7a54" path="res://resources/r_audio_stream_data/ui/menu_open.tres" id="6_soqdk"]
[ext_resource type="Resource" uid="uid://di1whcwfww46t" path="res://resources/r_audio_stream_data/ui/menu_close.tres" id="7_7wtut"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p4t2s"]
size = Vector2(44, 28.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eixgg"]
shader = ExtResource("3_x545g")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = false

[sub_resource type="AtlasTexture" id="AtlasTexture_wtndy"]
atlas = ExtResource("1_8pp38")
region = Rect2(129, 39, 30, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7s7ie"]
size = Vector2(21, 16)

[node name="QuestBoard" type="StaticBody2D"]
script = ExtResource("1_d1k07")

[node name="Interactable" parent="." instance=ExtResource("1_x40l5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(0, -4.25)
shape = SubResource("RectangleShape2D_p4t2s")
debug_color = Color(0.760933, 0.339496, 0.759394, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_eixgg")
position = Vector2(0, -11)
texture = SubResource("AtlasTexture_wtndy")

[node name="MenuOpen" parent="." instance=ExtResource("3_m0fie")]
bus = &"sfx"
audio_data = ExtResource("6_soqdk")

[node name="MenuClose" parent="." instance=ExtResource("3_m0fie")]
bus = &"sfx"
audio_data = ExtResource("7_7wtut")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -14)
shape = SubResource("RectangleShape2D_7s7ie")

[node name="FloatingLabel" type="Label" parent="."]
z_index = 4
offset_left = -2.0
offset_top = -43.0
offset_right = 38.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(0.9027, 0.824762, 0.477036, 1)
theme_override_font_sizes/font_size = 16
text = "!"
script = ExtResource("2_w7nap")

[connection signal="focus_changed" from="Interactable" to="." method="_on_interactable_focus_changed"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
